[package]
name = "penrose_conf"
version = "0.1.0"
authors = ["Jacob Stannix <jakestannix at gmail dot com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "penrose-wm"
path = "src/main.rs"

[[bin]]
name = "redblocks"
path = "src/bin/redblocks/main.rs"

[dependencies]
penrose = "0.2.0"
redblocks = "0.2.0"
